--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ setup.password=testtest
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=replyproductlin@gmail.com
-spring.mail.password=SuperSWP
+spring.mail.password=*****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
@@ -43,8 +43,8 @@ configdata.tempPath=./tmp
 ##spring.config.location=file:../conf/
 
 ##### Database configuration #####
-spring.datasource.username=postgresPLRE2
-spring.datasource.password=chen1234
+spring.datasource.username=postgresRAN2
+spring.datasource.password=ran2pwd
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:postgresql://localhost:5432/databasePLRE2
+spring.datasource.url=jdbc:postgresql://localhost:5432/databaseRAN2
 
